[package]
name = "godam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
zip = "2.2.0"
indicatif = "0.17.8"
