[package]
name = "godam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
clap = { version = "4.5.18", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
zip = "2.2.0"
indicatif = "0.17.8"
