[package]
name = "godam"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "godam (Godot Asset Manager) is an unofficial minimal command-line tool to install and manage addons from the Godot Asset Library."
homepage = "https://nilsiker.github.io/projects/godam/"
repository = "https://github.com/nilsiker/godam"
readme = "./README.md"
keywords = ["cli", "godot", "addon-manager"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.64"
clap = { version = "4.5.18", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json", "stream"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
zip = "2.2.0"
indicatif = "0.17.8"
console = "0.15.8"
